--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "typescript": "^5.8.3"
+    "postgres": "^3.4.5",
+    "typescript": "^5.8.3",
+    "zod": "^3.24.3"
   }
 }
