--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "internetdata",
-  "version": "1.0.3",
-  "main": "index.js",
+  "version": "1.0.5",
+  "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
     "postgres": "^3.4.5",
