--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "internetdata",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "dist/index.js",
+  "types": "dist/types.js",
   "license": "MIT",
   "dependencies": {
     "postgres": "^3.4.5",
