--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "internetdata",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "main": "dist/index.js",
-  "types": "dist/types.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "dependencies": {
     "postgres": "^3.4.5",
