--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "internetdata",
-  "version": "1.0.14",
+  "version": "1.0.17",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
+    "internetdata": "^1.0.16",
     "postgres": "^3.4.5",
     "typescript": "^5.8.3",
     "zod": "^3.24.3"
