--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "internetdata",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -8,6 +8,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/node": "^22.15.2",
     "postgres": "^3.4.5",
     "typescript": "^5.8.3",
     "zod": "^3.24.3"
