--- a/examples/file_download/package.json
+++ b/examples/file_download/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HN_example",
+  "name": "file_download",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -7,9 +7,8 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
-    "@types/node": "^22.15.2",
     "internetdata": "^1.1.17",
     "ts-node": "^10.9.2",
-    "zod": "^3.24.3"
+    "zod": "^3.24.4"
   }
 }
