--- a/examples/file_download/package.json
+++ b/examples/file_download/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
-    "internetdata": "^1.1.17",
+    "internetdata": "1.1.18",
     "ts-node": "^10.9.2",
     "zod": "^3.24.4"
   }
