--- a/examples/hn/package.json
+++ b/examples/hn/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@types/node": "^22.15.2",
-    "internetdata": "^1.1.17",
+    "internetdata": "1.1.18",
     "ts-node": "^10.9.2",
     "zod": "^3.24.3"
   }
