--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,16 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "baseUrl": ".",
+    "paths": {
+      "@argument": ["src/argument.ts"],
+      "@connection": ["src/connection.ts"],
+      "@instruction": ["src/instruction.ts"],
+      "@operation": ["src/operation.ts"],
+      "@target": ["src/target.ts"],
+      "@trip": ["src/trip.ts"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.d.ts", "*.d.ts"]
